src/objects/MCAR_NSN_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>COM__c</fullName>
        <label>COM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enterprise_ID__c</fullName>
        <label>Enterprise ID</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Manager__c</fullName>
        <label>Supplier Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tec__c</fullName>
        <label>TEC</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <label>NSN Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Enterprise_ID__c</columns>
        <columns>Tec__c</columns>
        <columns>Domain__c</columns>
        <columns>Role__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>NSN Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NSN Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>